# tools.olin.edu

./: .dockerignore  .editorconfig  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  heroku.yml  init_db.sql  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  uwsgi.ini  webpack.config.js
alembic/: env.py
alembic/versions/: 15a34a63be96_update_tables.py  240afa40c7bd_update_user_model.py  758b92a5a1b5_update_tables_2.py  a5c5a68df705_update_training_model.py  a751aa6d5ea5_create_tables.py  e632be55513f_add_user_id.py  f601a0b0a36f_update_models.py
blueprints/: admin.py  api.py  public.py
deployment/: Dockerfile.nginx  nginx.conf
docs/: proposal.md
documents/: proposal.md
modules/: db.py  forms.py
scripts/: build-docker.sh  build.sh  entrypoint.sh  local-setup.sh  testing.sh
static/: .sasslintrc  _vars.scss  build.css  build.js  errorboundary.js  index.js  index.scss  package-lock.json  package.json  training.js  webpack.config.js
static/css/: _vars.scss  admin.scss  button.scss  index.scss  page.scss  training.scss
static/js/: admin-index.js  admin.js  index.js  training.js
static/public/css/: 404.scss  _colors.scss  _fonts.scss  _mixins.scss  _vars.scss  errorboundary.scss  flex.scss  healthcheck.scss  index.scss  loading-screen.scss  responsive.scss  spacing.scss  type.scss
static/public/js/: index.js
templates/: base.j2
templates/admin/: admin.j2
templates/modules/: header.j2
templates/public/: base.j2  index.j2  login.j2  tool.j2  tools.j2  training.j2  training_new.j2  trainings.j2  user.j2  users.j2
tests/: conftest.py  test_app.py  test_auth.py  test_utils.py
tests/auth/: test_auth.py  test_jwt.py
tests/database/: test_user.py  test_user_schema.py
tests/fixtures/: user.py
tests/routes/: test_api.py  test_tool.py  test_trainings.py  test_user.py
tools/: __init__.py  app.py  config.py  errors.py
tools/auth/: __init__.py  azure.py  jwt.py
tools/database/: __init__.py  schema.py  tool.py  training.py  user.py
tools/routes/: __init__.py  auth.py  errors.py  graphql.py  main.py
tools/templates/: base.j2  flash.j2
tools/utils/: __init__.py  enums.py  logger.py  roles.py  scopes.py
web/: Dockerfile  babel.config.js  package-lock.json  package.json
web/.config/: rome.rjson
web/public/: index.html  manifest.json
web/scripts/: entrypoint.sh
web/src/: App.jsx  App.scss  Reducer.js  Router.js  Router.jsx  index.js  index.scss
(+37 files in other folders)
