[tool.poetry]
name = "tools"
version = "2.0.0"
description = "Web app for maintaining machine shop trainings."
authors = ["Jack Greenberg <j.lester.greenberg@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://tools.olin.edu"
repository = "https://github.com/jack-greenberg/tools.olin.edu"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
