[tool.poetry]
name = "tools"
version = "2.0.0"
description = "Web app for maintaining machine shop trainings."
authors = ["Jack Greenberg <j.lester.greenberg@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://tools.olin.edu"
repository = "https://github.com/jack-greenberg/tools.olin.edu"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
graphene = "^2.1.8"
SQLAlchemy = "^1.3.18"
Flask-GraphQL = "^2.0.1"
psycopg2 = "^2.8.5"
requests = "^2.24.0"
msal = "^1.4.1"
graphene_sqlalchemy = "^2.3.0"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
codecov = "^2.1.8"
coverage = {extras = ["toml"], version = "^5.2"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
nox = "^2020.5.24"
safety = "^1.9.0"
flake8 = "^3.8.3"

[tool.coverage.paths]
source = ["tools", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["tools"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
